Minor fixes and annotations.