@@ -3,20 +3,20 @@ package me.melontini.dark_matter.impl.base.config;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonObject;
-import lombok.experimental.ExtensionMethod;
+import lombok.NonNull;
 import me.melontini.dark_matter.api.base.config.ConfigManager;
 import me.melontini.dark_matter.api.base.util.Context;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.LinkedHashSet;
+import java.util.Objects;
 import java.util.Set;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 
-@ExtensionMethod(Files.class)
 public class ConfigManagerImpl<T> implements ConfigManager<T> {
 
     private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
@@ -39,7 +39,7 @@ public class ConfigManagerImpl<T> implements ConfigManager<T> {
     }
 
     @Override
-    public ConfigManager<T> fixup(Consumer<JsonObject> fixer) {
+    public ConfigManager<T> fixup(@NonNull Consumer<JsonObject> fixer) {
         fixers.add(fixer);
         return this;
     }
@@ -50,64 +50,66 @@ public class ConfigManagerImpl<T> implements ConfigManager<T> {
     }
 
     @Override
-    public T load(Path root, Context context) {
+    public T load(Path root, @NonNull Context context) {
         var path = resolve(root);
         Gson gson = context.get(ConfigManager.GSON).orElse(GSON);
 
-        AtomicReference<T> config = new AtomicReference<>();
-        if (path.exists()) {
-            try (var reader = path.newBufferedReader()) {
+        T config;
+        if (Files.exists(path)) {
+            try (var reader = Files.newBufferedReader(path)) {
                 JsonObject json = gson.fromJson(reader, JsonObject.class);
                 fixers.forEach(fixer -> fixer.accept(json));
-                config.set(gson.fromJson(json, type()));
+                config = gson.fromJson(json, type());
             } catch (Exception e) {
                 handlers.forEach(handler -> handler.accept(e, Stage.LOAD, path));
-                config.set(createDefault());
+                config = createDefault();
             }
         } else {
-            config.set(createDefault());
+            config = createDefault();
         }
-        load.forEach(listener -> listener.accept(config.get(), path));
-        return config.get();
+        var conf = Objects.requireNonNull(config);
+        load.forEach(listener -> listener.accept(conf, path));
+        return conf;
     }
 
     @Override
-    public void save(Path root, T config, Context context) {
+    public void save(Path root, T config, @NonNull Context context) {
         var path = resolve(root);
         Gson gson = context.get(ConfigManager.GSON).orElse(GSON);
 
         save.forEach(listener -> listener.accept(config, path));
 
         try {
-            path.getParent().createDirectories();
-            byte[] cfg = gson.toJson(config).getBytes();
-            if (path.exists() && Arrays.equals(path.readAllBytes(), cfg)) {
+            Files.createDirectories(path.getParent());
+            byte[] cfg = gson.toJson(config).getBytes(StandardCharsets.UTF_8);
+            if (Files.exists(path) && Arrays.equals(Files.readAllBytes(path), cfg)) {
                 return;
             }
-            path.write(cfg);
+            Files.write(path, cfg);
         } catch (Exception e) {
             handlers.forEach(handler -> handler.accept(e, Stage.SAVE, path));
         }
     }
 
-    public Path resolve(Path root) {
+    @Override
+    public Path resolve(@NonNull Path root) {
         return root.resolve(name() + ".json");
     }
 
     @Override
-    public ConfigManager<T> onSave(Listener<T> listener) {
+    public ConfigManager<T> onSave(@NonNull Listener<T> listener) {
         save.add(listener);
         return this;
     }
 
     @Override
-    public ConfigManager<T> onLoad(Listener<T> listener) {
+    public ConfigManager<T> onLoad(@NonNull Listener<T> listener) {
         load.add(listener);
         return this;
     }
 
     @Override
-    public ConfigManager<T> exceptionHandler(Handler handler) {
+    public ConfigManager<T> exceptionHandler(@NonNull Handler handler) {
         handlers.add(handler);
         return this;
     }
